[package]
name = "gearman-worker"
version = "0.3.0"
authors = ["Massimiliano Torromeo <massimiliano.torromeo@gmail.com>"]
description = "High level library to implement Gearman workers"
homepage = "https://github.com/mtorromeo/gearman-worker-rs"
repository = "https://github.com/mtorromeo/gearman-worker-rs.git"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["gearman", "queue-workers"]
edition = "2018"

[badges]
travis-ci = { repository = "mtorromeo/gearman-worker-rs", branch = "master" }
maintenance = { status = "experimental" }

[dependencies]
uuid = { version = "0.7", features = ["v4"] }
byteorder = "1.3"
